--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
    
     <h1>Welcome to my Profile Page!</h1>
+    <h4>Skills</h4>
+    JIRA 
+    GIT 
+    ReactJS 
+    ES6 
+    Android
+    
 
     
 </body>
